# tulipan

./: Makefile  README  config.h  config.status  configure  configure.in  libtool
autom4te.cache/: output.0  requests  traces.0
documentation/: HandbookofTulipan.aux  HandbookofTulipan.tex  HandbookofTulipan.toc  Tulipan_Bibliography.tex  Tulipan_Chapter01.tex  Tulipan_Chapter02.tex  Tulipan_Chapter03.tex  Tulipan_Chapter04.tex
lib/: cjpeg  djpeg  jpegtran  (+2 more)
src/: Makefile  Makefile.am  Makefile.in  MessageDigest.h  SHA.cpp  SHA.h  aBinarySequence.cpp  aBinarySequence.h  c_l_binarymatrix.cpp  c_l_binarymatrix.h  c_l_dct_coefficient.cpp  c_l_dct_coefficient.h  c_l_dynamicmatrix.cpp  c_l_dynamicmatrix.h  c_l_jpeg_interface.cpp  c_l_jpeg_interface.h  c_l_perturbedquantizer.cpp  c_l_perturbedquantizer.h  c_l_progressivematrix.cpp  c_l_randomgenerator.cpp  c_l_randomgenerator.h  c_l_randompool.cpp  c_l_randompool.h  c_l_selectorruler.cpp  c_l_selectorruler.h  c_l_sharandomgenerator.cpp  c_l_sharandomgenerator.h  c_l_wetdecoder.cpp  c_l_wetdecoder.h  c_l_wetencoder.cpp  c_l_wetencoder.h  c_l_wetsteganographer.cpp  c_l_wetsteganographer.h  common.h  l_tulipanglobal.cpp  tulipan.cpp
src/.deps/: aBinarySequence.P  c_l_binarymatrix.P  c_l_dct_coefficient.P  c_l_dynamicmatrix.P  c_l_jpeg_interface.P  c_l_perturbedquantizer.P  c_l_randomgenerator.P  c_l_randompool.P  c_l_selectorruler.P  c_l_sharandomgenerator.P  c_l_wetdecoder.P  c_l_wetencoder.P  c_l_wetsteganographer.P  l_tulipanglobal.P  tulipan.P
src/jpeg-6b/: cjpeg  djpeg  jctrans.c  jpegtran  rdjpgcom  wrjpgcom
(+4 files in other folders)
